force-app/main/default/objects/AB_Test_Variant__c/AB_Test_Variant__c.object-meta.xml
<CustomObject>
    <description>A/B Test variants (A and B) with their configurations</description>
    <label>A/B Test Variant</label>
    <nameField>
        <displayFormat>VAR-{00000}</displayFormat>
        <label>Variant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A/B Test Variants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>