force-app/main/default/objects/AB_Test_Variant__c/fields/AB_Test__c.field-meta.xml
<CustomField>
    <fullName>AB_Test__c</fullName>
    <description>Master-detail relationship to A/B Test</description>
    <label>A/B Test</label>
    <referenceTo>AB_Test__c</referenceTo>
    <relationshipLabel>A/B Test Variants</relationshipLabel>
    <relationshipName>AB_Test_Variants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>