force-app/main/default/objects/AB_Test_Variant__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <description>JSON configuration for the variant (colors, text, layout, etc.)</description>
    <label>Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>