force-app/main/default/objects/AB_Test_Variant__c/fields/Is_Control__c.field-meta.xml
<CustomField>
    <fullName>Is_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this variant is the control (baseline) variant</description>
    <label>Is Control</label>
    <type>Checkbox</type>
</CustomField>