force-app/main/default/objects/AB_Test_Variant__c/fields/Variant_Name__c.field-meta.xml
<CustomField>
    <fullName>Variant_Name__c</fullName>
    <description>Name of the variant (e.g., Control, Variant A, Variant B)</description>
    <label>Variant Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Control</fullName>
                <default>true</default>
                <label>Control</label>
            </value>
            <value>
                <fullName>Variant A</fullName>
            </value>
            <value>
                <fullName>Variant B</fullName>
            </value>
            <value>
                <fullName>Variant C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>